bookinfo/06_retries/istio-reviews-all-v2-with-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.bookinfo.svc.cluster.local
        subset: v2
    timeout: 1s
    retries:
      attempts: 3
      perTryTimeout: 0.5s
